--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,53 +5,125 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/layout_margin"
-            app:boxCornerRadiusBottomStart="@dimen/radius_bottom_start"
-            app:boxCornerRadiusTopEnd="@dimen/radius_top_end"
-            app:counterEnabled="true"
-            app:counterMaxLength="@string/max_lenght"
-            app:endIconCheckable="true"
-            app:endIconDrawable="@drawable/ic_baseline_art_track_24"
-            app:endIconMode="custom"
-            app:helperText="@string/helper_text_text_input_layout">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_input"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_margin="@dimen/layout_margin"
+                app:boxCornerRadiusBottomStart="@dimen/radius_bottom_start"
+                app:boxCornerRadiusTopEnd="@dimen/radius_top_end"
+                app:counterEnabled="true"
+                app:counterMaxLength="@string/max_lenght"
+                app:endIconCheckable="true"
+                app:endIconDrawable="@drawable/ic_baseline_art_track_24"
+                app:endIconMode="custom"
+                app:helperText="@string/helper_text_text_input_layout">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-        <ImageView
-            android:id="@+id/img_photo_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:ignore="MissingConstraints"
-            tools:srcCompat="@tools:sample/avatars" />
+            <ImageView
+                android:id="@+id/img_photo_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:ignore="MissingConstraints"
+                tools:srcCompat="@tools:sample/avatars" />
 
-        <include
-            android:id="@+id/layout_bottom_sheet_included"
-            layout="@layout/layout_bottom_sheet" />
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chip_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:singleLine="true"
+                app:singleSelection="true">
 
-    </LinearLayout>
+                <com.google.android.material.chip.Chip
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Action" />
+
+                <com.google.android.material.chip.Chip
+                    style="@style/Widget.MaterialComponents.Chip.Entry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Entry" />
+
+                <com.google.android.material.chip.Chip
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choice" />
+
+                <com.google.android.material.chip.Chip
+                    style="@style/Widget.MaterialComponents.Chip.Filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Filter" />
+
+            </com.google.android.material.chip.ChipGroup>
+            <TextView
+                android:id="@+id/text_Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                tools:text="text title"/>
+            <TextView
+                android:id="@+id/text_Explanation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                tools:text="text explanation"/>
+
+            <!--        <include
+                        android:id="@+id/layout_bottom_sheet_included"
+                        layout="@layout/layout_bottom_sheet" />-->
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:layout_gravity="center"
+        android:visibility="gone"
         tools:visibility="visible" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:backgroundTint="@color/cardview_dark_background"
+        app:fabAlignmentMode="center"
+        app:hideOnScroll="true"
+        app:menu="@menu/menu_bottom_appbar" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/cardview_dark_background"
+        android:soundEffectsEnabled="true"
+        android:src="@android:drawable/btn_star_big_on"
+        app:hideOnScroll="true"
+        app:layout_anchor="@id/bottom_appbar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
