--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_incl"
     android:layout_width="match_parent"
-    android:layout_height="340dp"
+    android:layout_height="@dimen/layout_height"
     android:background="@android:color/darker_gray"
     android:orientation="vertical"
     app:behavior_hideable="true"
-    app:behavior_peekHeight="40dp"
+    app:behavior_peekHeight="@dimen/peekHeight"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
-<!--    tools:showIn="@layout/fragment_main"-->
+    <!--    tools:showIn="@layout/fragment_main"-->
 
     <TextView
         android:id="@+id/header_text_view"
@@ -29,9 +29,9 @@
         android:text="description" />
 
     <com.google.android.material.button.MaterialButton
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/app_name" />
 
 </LinearLayout>
