--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="padding_chip_group_end">10dp</dimen>
     <dimen name="text_size_title">20sp</dimen>
     <dimen name="text_size_explanation">15sp</dimen>
+    <dimen name="text_padding_start_explanation">10dp</dimen>
+    <dimen name="text_padding_end_explanation">10dp</dimen>
+    <dimen name="peekHeight">40dp</dimen>
+    <dimen name="layout_height">340dp</dimen>
 </resources>
