--- a/app/src/main/res/layout/faragment_dialog_sheet_bottom.xml
+++ b/app/src/main/res/layout/faragment_dialog_sheet_bottom.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/layout_margin"
-        app:boxCornerRadiusBottomStart="@dimen/radius_bottom_start"
-        app:boxCornerRadiusTopEnd="@dimen/radius_top_end"
-        app:counterEnabled="true"
-        app:counterMaxLength="@string/max_lenght"
-        app:endIconCheckable="true"
-        app:endIconDrawable="@drawable/ic_baseline_art_track_24"
-        app:endIconMode="custom"
-        app:helperText="@string/helper_text_text_input_layout">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true" />
-    </com.google.android.material.textfield.TextInputLayout>
-</FrameLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_Title_dialog_sheet_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/title_text_generator"
+                android:textAlignment="center"
+                android:textSize="@dimen/text_size_title"
+                tools:text="text title" />
+
+            <TextView
+                android:id="@+id/text_Explanation_dialog_sheet_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/text_padding_start_explanation"
+                android:paddingEnd="@dimen/text_padding_end_explanation"
+                android:textSize="@dimen/text_size_explanation"
+                android:text="@string/text_generator"/>
+
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
