Дополнил первый урок и расширил фнкциональную базу 1) добавил векторные ресурсы к проекту 2) добавил разные цветовые схемы 3) добавил анимацию кнопки fab 4) добавил динамическую замену меню при анимации кнопки fab 5) добавил фрагмент, который будтет содержать настройки тем и если успею возможность переключения изображений с Nasa

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,7 +27,8 @@
             app:endIconDrawable="@drawable/ic_baseline_search_24"
             app:endIconMode="custom"
             app:helperText="@string/helper_text_text_input_layout"
-            app:startIconDrawable="@drawable/ic_outline_arrow_circle_up_24">
+            app:startIconDrawable="@drawable/ic_outline_arrow_circle_up_24"
+            tools:ignore="MissingConstraints">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_text"
@@ -46,7 +47,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"
             tools:srcCompat="@tools:sample/avatars" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -68,15 +68,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/cardview_dark_background"
         app:fabAlignmentMode="center"
         app:hideOnScroll="true"
+        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"
         app:menu="@menu/menu_bottom_appbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/cardview_dark_background"
+
         android:soundEffectsEnabled="true"
         android:src="@android:drawable/btn_star_big_on"
         app:layout_anchor="@id/bottom_appbar"
