--- a/app/src/main/res/menu/menu_bottom_appbar.xml
+++ b/app/src/main/res/menu/menu_bottom_appbar.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_one"
-        android:title="ActionOne"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_100tb"/>
+    <item
+        android:id="@+id/app_bar_fav"
+        android:icon="@drawable/ic_favourite_menu"
+        android:title="@string/favorite"
+        app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/action_two"
-        android:title="ActionTwo"
-        android:icon="@drawable/ic_100tb"/>
-
-    <item android:id="@+id/action_three"
-        android:title="ActionThree"
-        android:icon="@drawable/ic_100tb"/>
-
+    <item
+        android:id="@+id/app_bar_setting"
+        android:icon="@drawable/ic_settings_menu"
+        android:title="@string/settings"
+        app:showAsAction="ifRoom" />
 </menu>
