--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,35 @@
     <!-- Base application theme. -->
     <style name="Theme.MaterialDesign" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="android:navigationBarColor">@color/paletteblue_500</item>
+        <item name="colorPrimary">@color/paletteblue_500</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryContainer">@color/paletteblue_100</item>
+        <item name="colorOnPrimaryContainer">@color/paletteblue_900</item>
+        <item name="colorPrimaryInverse">@color/paletteblue_200</item>
+        <item name="colorPrimaryVariant">@color/paletteblue_700</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/paletteblue_600</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondaryContainer">@color/paletteblue_100</item>
+        <item name="colorOnSecondaryContainer">@color/paletteblue_900</item>
+        <item name="colorTertiary">@color/paletteblue_600</item>
+        <item name="colorOnTertiary">@color/white</item>
+        <item name="colorTertiaryContainer">@color/paletteblue_100</item>
+        <item name="colorOnTertiaryContainer">@color/paletteblue_900</item>
+        <item name="colorSecondaryVariant">@color/paletteblue_700</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="floatingActionButtonStyle">@style/myFloatingActionButtonStyle</item>
+        <item name="bottomAppBarStyle">@style/myBottomAppBarStyle</item>
+    </style>
+
+    <style name="myFloatingActionButtonStyle" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="backgroundTint">@color/paletteblue_A700</item>
+    </style>
+    <style name="myBottomAppBarStyle" parent="Widget.MaterialComponents.BottomAppBar">
+        <item name="backgroundTint">@color/paletteorange_800</item>
     </style>
 </resources>
