6) создал базовую тему с сатибутами, создал три темы со ссылками атрибутов на конкректные цвета

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,6 +37,15 @@
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?superColor_300"
+            android:text="@string/attr_text"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/img_photo_day"
+            app:layout_constraintTop_toBottomOf="@+id/text_input"
+            tools:layout_editor_absoluteX="10dp" />
 
         <com.example.materialdesign.utils.EquilateralImageView
             android:id="@+id/img_photo_day"
@@ -70,14 +79,13 @@
         android:layout_gravity="bottom"
         app:fabAlignmentMode="center"
         app:hideOnScroll="true"
-        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"
-        app:menu="@menu/menu_bottom_appbar" />
+        app:menu="@menu/menu_bottom_appbar"
+        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:soundEffectsEnabled="true"
         android:src="@android:drawable/btn_star_big_on"
         app:layout_anchor="@id/bottom_appbar"
