--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -4,56 +4,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/chips_type"
+        android:textAlignment="center"
+        android:textSize="@dimen/text_size_title"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_archive"
-            android:thumb="@null"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <com.google.android.material.chip.Chip
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Default"
-            app:chipBackgroundColor="#1A576A" />
+            android:text="Default" />
 
         <com.google.android.material.chip.Chip
-
+            style="@style/Widget.MaterialComponents.Chip.Entry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Entry" />
 
         <com.google.android.material.chip.Chip
-
+            style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Choice" />
 
         <com.google.android.material.chip.Chip
-
+            style="@style/Widget.MaterialComponents.Chip.Action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Action" />
 
         <com.google.android.material.chip.Chip
-
+            style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Filter" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/nasa_picture_of_day"
+        android:textAlignment="center"
+        android:textSize="@dimen/text_size_title"
+        android:textStyle="bold" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
@@ -66,19 +67,19 @@
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Сегодня" />
+            android:text="@string/today" />
 
         <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Вчера" />
+            android:text="@string/yesterday" />
 
         <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Позавчера" />
+            android:text="@string/twodaysago" />
 
 
     </com.google.android.material.chip.ChipGroup>
@@ -91,9 +92,9 @@
         android:layout_marginTop="16dp">
 
         <com.google.android.material.tabs.TabItem
-            android:tag="fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:tag="fff"
             android:text="Tab 1" />
 
         <com.google.android.material.tabs.TabItem
@@ -116,13 +117,14 @@
         android:layout_marginEnd="20dp"
         android:gravity="center"
         android:orientation="horizontal">
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView"
-            android:layout_margin="20dp"
-            app:cardElevation="20dp"
-            app:cardCornerRadius="20dp"
             android:layout_width="match_parent"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp"
+            android:layout_margin="20dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="20dp" />
 
     </LinearLayout>
 
@@ -130,16 +132,83 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="visible">
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="wrap_content"
-            android:visibility="visible"
             android:layout_height="wrap_content"
+            android:visibility="visible"
             app:menu="@menu/menu_bottom_navigation" />
     </LinearLayout>
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/theme_select"
+        android:textAlignment="center"
+        android:textSize="@dimen/text_size_title" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroupNightThemeSelect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/layout_margin"
+        app:singleSelection="true">
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/day" />
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/layout_margin"
+            android:text="@string/night" />
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chipBackgroundColor="@color/paletteblue_300"
+            android:layout_marginStart="@dimen/layout_margin"
+            android:text="@string/theme_default" />
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chipBackgroundColor="@color/paletteorange_300"
+            android:text="@string/theme_one" />
+
+        <com.google.android.material.chip.Chip
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chipBackgroundColor="@color/mypalettegreen_300"
+            android:text="@string/two" />
+    </com.google.android.material.chip.ChipGroup>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/play_pause_circle"
+            android:thumb="@null" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
