--- a/app/src/main/res/layout/faragment_dialog_sheet_bottom.xml
+++ b/app/src/main/res/layout/faragment_dialog_sheet_bottom.xml
@@ -16,6 +16,7 @@
 
             <TextView
                 android:id="@+id/text_Title_dialog_sheet_bottom"
+                android:textAppearance="@style/myHeadlineStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/title_text_generator"
