--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,12 +32,14 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_text"
+                android:fontFamily="@font/gost_type_a_standard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/slideOffsetBH"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?superColor_300"
