--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,13 +19,11 @@
         <item name="colorTertiaryContainer">?superColor_100</item>
         <item name="colorOnTertiaryContainer">?superColor_900</item>
         <item name="colorSecondaryVariant">?superColor_700</item>
-
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/superColor_900</item>
         <!-- Customize your theme here. -->
         <item name="floatingActionButtonStyle">@style/myFloatingActionButtonStyle</item>
         <item name="bottomAppBarStyle">@style/myBottomAppBarStyle</item>
-
         <item name="textAppearanceHeadline1">@style/myHeadlineStyle</item>
     </style>
 
@@ -62,7 +60,6 @@
         <item name="superColor_A200">@color/paletteorange_A200</item>
         <item name="superColor_A400">@color/paletteorange_A400</item>
         <item name="superColor_A700">@color/paletteorange_A700</item>
-
     </style>
 
     <style name="MyGreenTheme" parent="Theme.MaterialDesign">
