Урок №3 1) добавлена еще одна активиты вызывается через нижнее меню слева 2) добавлен ViewPager (старый) и пагинация

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_container_view"
-    android:name="com.example.materialdesign.ui.MainFragment"
+    android:name="com.example.materialdesign.view.MainFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity" />
+    tools:context=".view.MainActivity" />
