--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="text_padding_end_explanation">10dp</dimen>
     <dimen name="peekHeight">190dp</dimen>
     <dimen name="layout_height">340dp</dimen>
+    <dimen name="drawable_padding_app_compat_text_view">10dp</dimen>
+    <dimen name="text_size_app_compat_text_view">20sp</dimen>
 </resources>
