ДЗ№5 2) работа с Transition (анимация резлетающихся прямоугольников)

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -4,28 +4,33 @@
         <item
             android:id="@+id/navigation_one"
             android:icon="@drawable/ic_load_error_vector"
-            android:title="На экран NavigationActivity" />
+            android:title="@string/title_navigation_one" />
         <item
             android:id="@+id/navigation_two"
             android:icon="@drawable/ic_send"
-            android:title="На экран BottomNavigationActivity" />
+            android:title="@string/title_navigation_two" />
     </group>
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/navigation_three"
             android:icon="@drawable/ic_settings_menu"
-            android:title="На экран LayoutActivity" />
+            android:title="@string/title_navigation_three" />
 
         <item
             android:id="@+id/navigation_four"
             android:icon="@drawable/ic_favourite_menu"
-            android:title="На экран AnimationsActivity" />
+            android:title="@string/title_navigation_four" />
 
         <item
             android:id="@+id/navigation_five"
+            android:icon="@drawable/ic_baseline_markunread_mailbox_24"
+            android:title="@string/title_navigation_five" />
+
+        <item
+            android:id="@+id/navigation_six"
             android:icon="@drawable/ic_archive"
-            android:title="На экран RecyclerActivity" />
+            android:title="@string/title_navigation_five" />
 
     </group>
 
